# ecdsa-fuzzy-signature

./: README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: api.ts  crypto.ts  fuzzy.ts  index.ts  types.ts
src/biometricsig/: __init__.py  _fastpbkdf2_shim.py  api.py  crypto.py  exceptions.py  fuzzy.py
tests/: __init__.py  api.test.ts  conftest.py  crypto.test.ts  fuzzy.test.ts  test_api.py  test_crypto.py  test_exceptions.py  test_fuzzy.py  tsconfig.json
