[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biometricsig"
version = "0.1.0"
description = "Biometric-based signing using fuzzy extractors and ECDSA"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "BiometricSig Contributors"}
]
keywords = ["biometric", "ecdsa", "fuzzy-extractor", "signature", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "ecdsa>=0.18.0",
    "fuzzy-extractor>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/example/biometricsig"
"Bug Tracker" = "https://github.com/example/biometricsig/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

